--- a/pytest.ini
+++ b/pytest.ini
@@ -6,3 +6,11 @@ testpaths =
     tests
 python_files = test_*.py
 pythonpath = .
+filterwarnings =
+    ignore::PendingDeprecationWarning
+[flake8]
+max-line-length = 100
+ignore = E203, W503
+exclude = .git,__pycache__,docs,build,dist
+[mypy-untyped_package.*]
+follow_untyped_imports = True
