--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ __pycache__/
 venv/
 ENV/
 env/
-
+(.venv)
 # Editor Configs
 .vscode/
 .idea/
@@ -64,14 +64,12 @@ build/
 new*
 =======
 *.py[codz]
-*$py.class
 
 # C extensions
 *.so
 
 # Distribution / packaging
 .Python
-build/
 develop-eggs/
 dist/
 downloads/
@@ -84,7 +82,6 @@ sdist/
 var/
 wheels/
 share/python-wheels/
-*.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
