--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,33 +6,30 @@ on:
   pull_request:
     branches: [main]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      INTERNAL_API_KEY: ${{ secrets.INTERNAL_API_KEY }}
-      FAKE_OPENAI: ${{ secrets.FAKE_OPENAI }}
+env:
+  INTERNAL_API_KEY: ${{ secrets.INTERNAL_API_KEY }}
+  FAKE_OPENAI: ${{ secrets.FAKE_OPENAI }}
 
+jobs:
+  lint:
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install Dev Dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r dev-requirements.txt
 
       - name: Run pre-commit hooks
         run: pre-commit run --all-files
-
-      - name: Run Tests
-        run: pytest
-
 
       - name: Run linters (black, isort, flake8, mypy)
         run: |
@@ -41,11 +38,58 @@ jobs:
           flake8 .
           mypy .
 
-      - name: Run tests
-        run: |
-          pytest tests
+  test:
+    runs-on: ubuntu-latest
+    needs: lint
 
-      - name: Detect secrets in code
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
         run: |
-          pip install detect-secrets
-          detect-secrets scan --baseline .secrets.baseline
+          python -m pip install --upgrade pip
+          pip install -r dev-requirements.txt
+          pip install coverage pytest-cov
+
+      - name: Run tests with coverage
+        run: |
+          coverage run -m pytest tests
+          coverage report -m
+          coverage xml
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage.xml
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          file: coverage.xml
+          flags: unittests
+          fail_ci_if_error: true
+
+  secrets-scan:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install detect-secrets
+        run: pip install detect-secrets
+
+      - name: Run detect-secrets scan
+        run: detect-secrets scan --baseline .secrets.baseline
