--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,13 +6,12 @@ on:
   pull_request:
     branches: [main]
 
-env:
-  INTERNAL_API_KEY: ${{ secrets.INTERNAL_API_KEY }}
-  FAKE_OPENAI: ${{ secrets.FAKE_OPENAI }}
-
 jobs:
-  lint:
+  build:
     runs-on: ubuntu-latest
+    env:
+      INTERNAL_API_KEY: ${{ secrets.INTERNAL_API_KEY }}
+      FAKE_OPENAI: ${{ secrets.FAKE_OPENAI }}
 
     steps:
       - name: Checkout code
@@ -23,73 +22,34 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install Dev Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r dev-requirements.txt
+          pip install pre-commit  # Required for hook runner
 
-      - name: Run pre-commit hooks
+      - name: Run Pre-commit Hooks
         run: pre-commit run --all-files
 
-      - name: Run linters (black, isort, flake8, mypy)
+      - name: Run Linters (black, isort, flake8, mypy)
         run: |
           black . --check
           isort . --check-only
           flake8 .
           mypy .
 
-  test:
-    runs-on: ubuntu-latest
-    needs: lint
+      - name: Run Unit & Integration Tests
+        run: pytest tests
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install dependencies
+      - name: Detect Secrets
         run: |
-          python -m pip install --upgrade pip
-          pip install -r dev-requirements.txt
-          pip install coverage pytest-cov
-
-      - name: Run tests with coverage
-        run: |
-          coverage run -m pytest tests
-          coverage report -m
-          coverage xml
-
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage-report
-          path: coverage.xml
+          pip install detect-secrets
+          detect-secrets scan --baseline .secrets.baseline
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
-          file: coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}  # Add this in GitHub Secrets
+          files: ./coverage.xml
           flags: unittests
-          fail_ci_if_error: true
-
-  secrets-scan:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install detect-secrets
-        run: pip install detect-secrets
-
-      - name: Run detect-secrets scan
-        run: detect-secrets scan --baseline .secrets.baseline
+          name: codecov-umbrella
