--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           black . --check
           isort . --check-only
-          flake8 .
+          flake8 . --max-line-length=100 --ignore=E203,W503
           mypy .
 
       - name: Run Unit & Integration Tests
