--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r dev-requirements.txt
-          pip install pre-commit  # Required for hook runner
+          pip install pre-commit
 
       - name: Run Pre-commit Hooks
         run: pre-commit run --all-files
@@ -38,18 +38,19 @@ jobs:
           flake8 . --max-line-length=100 --ignore=E203,W503
           mypy .
 
-      - name: Run Unit & Integration Tests
-        run: pytest tests
+      - name: Run Unit & Integration Tests with Coverage
+        run: |
+          pytest --cov=MultiAgentChatBot --cov-report=xml
 
       - name: Detect Secrets
         run: |
-          pip install detect-secrets
           detect-secrets scan --baseline .secrets.baseline
 
-      - name: Upload coverage to Codecov
+      - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}  # Add this in GitHub Secrets
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml
           flags: unittests
           name: codecov-umbrella
+
