--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  python-tests:
+    name: Python Lint & Tests
     runs-on: ubuntu-latest
     env:
       INTERNAL_API_KEY: ${{ secrets.INTERNAL_API_KEY }}
@@ -22,10 +23,11 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install Dev Dependencies
+      - name: Install Python Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r dev-requirements.txt
+          pip install -r requirements.txt
           pip install pre-commit
 
       - name: Run Pre-commit Hooks
@@ -39,18 +41,44 @@ jobs:
           mypy .
 
       - name: Run Unit & Integration Tests with Coverage
-        run: |
-          pytest --cov=MultiAgentChatBot --cov-report=xml
+        run: pytest --cov=. --cov-report=xml
 
       - name: Detect Secrets
-        run: |
-          detect-secrets scan --baseline .secrets.baseline
+        run: detect-secrets scan --baseline .secrets.baseline
 
-      - name: Upload Coverage to Codecov
+      - name: Upload Python coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml
-          flags: unittests
-          name: codecov-umbrella
+          flags: python
+          name: codecov-python
 
+  javascript-tests:
+    name: JavaScript (Jest) Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install Node Dependencies
+        run: npm install
+
+      - name: Run Jest Tests with Coverage
+        run: npx jest --coverage
+
+      - name: Upload JS Coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage/lcov.info
+          flags: javascript
+          name: codecov-javascript
